# rogue-likely

./: .gitignore  CMakeLists.txt  main.cpp
lib/: rogue_likely.cpp  rogue_likely.h
lib/controller/: controller.cpp  controller.h
lib/object/: alive_object.cpp  alive_object.h  object.cpp  object.h  object_fwd.cpp  object_fwd.h
lib/ui/: abstract_ui.cpp  abstract_ui.h  user_action.cpp  user_action.h
lib/ui/ncurses/: ncurses_ui.cpp  ncurses_ui.h
lib/world/: cell.cpp  cell.h  position.cpp  position.h  world.cpp  world.h  world_generator.cpp  world_generator.h  world_view.cpp  world_view.h
test/: cell_test.cpp  sample_test.cpp
